--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ footer {
     color: #727272;
 }
 
-.button {
+.primary-button {
     font-weight: 600;
     font-size: 20px;
     color: #FFFFFF;
@@ -44,10 +44,22 @@ footer {
 
 /* <!---------------------- Header section Start ---------------------> */
 /* <!---------------------- main section Start -----------------------> */
-
-.nav-bar,
-ul {
+.nav-bar {
     display: flex;
+    justify-content: space-between;
+}
+
+.menu {
+    display: flex;
+    gap: 50px;
+}
+
+.menu a {
+    text-decoration: none;
+}
+
+.menu li {
+    list-style-type: none;
     font-weight: 500;
     font-size: 18px;
     color: #424242;
@@ -88,6 +100,10 @@ ul {
 .quick-list-team img {
     width: 342px;
     height: 342px;
+}
+
+.quick-list-info {
+    margin: 290px 290px 290px 0;
 }
 
 .quick-list-info h1 {
@@ -145,14 +161,33 @@ ul {
     margin-bottom: 20px;
 }
 
-.extra-list img {
-    width: 800px;
-    height: 1059px;
+.architect {
+    position: relative;
+}
+
+.architect button {
+    width: 342px;
+    height: 200px;
+    position: absolute;
+    left: 0;
+    bottom: -30px;
+    /* universal button is here */
+}
+.architect img{
+    padding-left: 80px;
+    padding-bottom: 80px;
+}
+.architect h1 {
+    font-weight: 700;
+    font-size: 65px;
 }
 
 /* <!---------------------- extra-list section end -------------------> */
 /* <!---------------------- some-facts section start -----------------> */
-.some-facts h1 {
+.some-facts-info{
+    width: 550px;
+}
+.some-facts-info h1 {
     margin-bottom: 15px;
 }
 
@@ -186,7 +221,13 @@ ul {
 
 /* <!---------------------- some-facts section end -------------------> */
 /* <!---------------------- sponsors section start -------------------> */
+.sponsors-info-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .sponsors-info {
+    width: 550px;
     margin: 30px;
     text-align: center;
 }
@@ -194,10 +235,9 @@ ul {
 .sponsors-info h1 {
     margin-bottom: 25px;
 }
-
 .sponsors-logo {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between   
 }
 
 /* <!---------------------- sponsors section end ---------------------> */
@@ -213,5 +253,4 @@ footer {
     text-align: center;
     color: #424242;
 }
-
 /* <!---------------------- footer section end -----------------------> */
