--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+/* <!-------------------------------------------------------
+        ==============Utilities section end===================
+        ----------------------------------------------------> */
 * {
     margin: 0;
 }
@@ -41,9 +44,18 @@ footer {
     border: none;
     margin: 30px 0;
 }
+/* <!-------------------------------------------------------
+        ==============Utilities section end===================
+        ----------------------------------------------------> */
 
-/* <!---------------------- Header section Start ---------------------> */
-/* <!---------------------- main section Start -----------------------> */
+/* <!-------------------------------------------------------
+        ==============Header section start===================
+        ----------------------------------------------------> */
+
+        
+/* <!-------------------------------------------------------
+        ==============main section start=====================
+        ----------------------------------------------------> */
 .nav-bar {
     display: flex;
     justify-content: space-between;
@@ -84,8 +96,14 @@ footer {
     margin: 55px;
 }
 
-/* <!---------------------- Header section end -----------------------> */
-/* <!---------------------- quick-list section start -----------------> */
+/* <!-------------------------------------------------------
+        ==============Header section end=====================
+        ----------------------------------------------------> */
+
+
+/* <!------------------------------------------------------
+        ==============quick list start==========================
+        --------------------------------------------------------> */
 .quick-list {
     display: flex;
     gap: 70px;
@@ -122,8 +140,14 @@ footer {
     color: #FF900E;
 }
 
-/* <!---------------------- quick-list section end -------------------> */
-/* <!---------------------- extra-list section start -----------------> */
+/* <!-------------------------------------------------------
+        ==============Quick list section end=====================
+        ----------------------------------------------------> */
+
+
+/* <!-------------------------------------------------------
+        ==============Extra list section start==================
+        ------------------------------------------------------->*/
 
 .extra-list {
     display: flex;
@@ -173,29 +197,38 @@ footer {
     bottom: -30px;
     /* universal button is here */
 }
-.architect img{
+
+.architect img {
     padding-left: 80px;
     padding-bottom: 80px;
 }
+
 .architect h1 {
     font-weight: 700;
     font-size: 65px;
 }
 
-/* <!---------------------- extra-list section end -------------------> */
-/* Top engineers Section  start */
+/* <!-------------------------------------------------------
+        ==============extra list section end=====================
+        --------------------------------------------------------> */
+
+/*   <!-----------------------------------------------------------
+        ==============Top engineer section start=====================
+        -----------------------------------------------------------> */
 .engineers {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 30px;
     margin: 50px;
 }
-.engineer-details h3{
-        font-weight: 600;
-        font-size: 20px;
-        color: #131313;
-        margin-bottom: 20px;
+
+.engineer-details h3 {
+    font-weight: 600;
+    font-size: 20px;
+    color: #131313;
+    margin-bottom: 20px;
 }
+
 .engineer {
     display: flex;
     gap: 18px;
@@ -206,11 +239,18 @@ footer {
     height: 106px;
     width: 106px;
 }
-/* Top engineers Section  end */
-/* <!---------------------- some-facts section start -----------------> */
-.some-facts-info{
+
+/*   <!-----------------------------------------------------------
+        ==============Top engineer section end=====================
+        -----------------------------------------------------------> */
+
+/* <!-------------------------------------------------------
+        ==============some facts section start=====================
+        ---------------------------------------------------------> */
+.some-facts-info {
     width: 550px;
 }
+
 .some-facts-info h1 {
     margin-bottom: 15px;
 }
@@ -229,36 +269,48 @@ footer {
     padding-top: 45px;
     text-align: center;
 }
-.icon:hover{
+
+.icon:hover {
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.6);
     border-radius: 25px;
     background-color: #FF900E;
 }
+
 .icon h2 {
     font-weight: 600;
     font-size: 45px;
     color: #424242;
     margin: 5px;
 }
-.icon:hover h2{
+
+.icon:hover h2 {
     color: black;
 }
+
 .icon p {
     font-weight: 600;
     font-size: 20px;
     color: #727272;
 }
-.icon:hover p{
+
+.icon:hover p {
     color: white;
     text-decoration: underline;
 }
-/* <!---------------------- some-facts section end -------------------> */
-/* <!---------------------- sponsors section start -------------------> */
-.sponsors-info-container{
+
+/*<!-------------------------------------------------------
+        ==============some facts section end=====================
+        ---------------------------------------------------------> */
+
+/* <!-------------------------------------------------------
+        ==============Sponsors section start=====================
+        ---------------------------------------------------------> */
+.sponsors-info-container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .sponsors-info {
     width: 550px;
     margin: 30px;
@@ -268,15 +320,24 @@ footer {
 .sponsors-info h1 {
     margin-bottom: 25px;
 }
+
 .sponsors-logo {
     display: flex;
     justify-content: space-between;
-    filter: grayscale(100%); 
+    filter: grayscale(100%);
 }
-/* <!---------------------- sponsors section end ---------------------> */
-/* <!---------------------- main section end -------------------------> */
 
-/* <!---------------------- footer section Start ---------------------> */
+/* <!-------------------------------------------------------
+        ==============Sponsors section start=====================
+        ---------------------------------------------------------> */
+
+/* <!-------------------------------------------------------
+        ==============main section end=====================
+        ---------------------------------------------------------> */
+
+/* <!-------------------------------------------------------
+        ==============footer section start=====================
+        --------------------------------------------------------->*/
 footer {
     margin: 130px 240px 220px;
     background: #FFF4E7;
@@ -286,4 +347,7 @@ footer {
     text-align: center;
     color: #424242;
 }
-/* <!---------------------- footer section end -----------------------> */
+
+/* <!-------------------------------------------------------
+        ==============Sponsors section end=====================
+        ---------------------------------------------------------> */
