--- a/styles/style.css
+++ b/styles/style.css
@@ -48,14 +48,18 @@ footer {
         ==============Utilities section end===================
         ----------------------------------------------------> */
 
+
+/* <!-------------------------------------------------------
+        ==============main section start=====================
+        ----------------------------------------------------> */
+
+
 /* <!-------------------------------------------------------
         ==============Header section start===================
         ----------------------------------------------------> */
 
         
-/* <!-------------------------------------------------------
-        ==============main section start=====================
-        ----------------------------------------------------> */
+
 .nav-bar {
     display: flex;
     justify-content: space-between;
@@ -351,3 +355,215 @@ footer {
 /* <!-------------------------------------------------------
         ==============Sponsors section end=====================
         ---------------------------------------------------------> */
+
+        /*********************************************************************************************************
+         Responsive for Mobile devices
+         **********************************************************************************************************/
+@media only screen and (max-width: 576px) {
+    *{
+        margin: 0;
+        padding: 5px;
+    }
+    body {
+        width: 100%;
+    }  
+    header,
+    main,
+    footer {
+        padding: 0;
+    } 
+    .primary-button {
+        font-weight: 600;
+        font-size: 20px;
+        color: #FFFFFF;
+        padding: 13px;
+        background: #FF900E;
+        border-radius: 8px;
+        border: none;
+        margin: 13px 0;
+    }
+    .description{
+        width: 80%;
+    }
+    .nav-bar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .nav-bar.title{
+        width: 80%;
+    }
+    ul, .banner-info{
+        padding: 0;
+    }
+    .menu {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    } 
+  
+    .banner-info {
+        margin-top: 30px;
+    }
+    
+    .banner-info h1 {
+        font-size: 24px;
+        margin-bottom: 13px;
+    }
+    
+    .banner img {
+        width: 70%;
+        height: 200px;
+        margin: 0px;
+    }
+    .quick-list {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 17px;
+    }
+    
+    .quick-list-team {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 14px;
+    }
+    
+    .quick-list-team img {
+        width: 90%;
+    }
+    
+    .quick-list-info {
+        margin: 90px 90px 90px 0;
+    }
+    
+    .quick-list-info h1 {
+        margin-bottom: 13px;
+    }  
+    
+    .extra-list {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        margin: 30px 0px;
+    }
+    
+    .extra-list-title {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .extra-list-title h1 {
+        margin: 0px;
+    }
+    
+    .vl {
+        width: 5px;
+        height: 36px;
+        margin-top: 12px;
+    }
+    
+    .article {
+        padding: 13px;
+        margin: 0px;
+        background: #FFFFFF;
+        box-shadow: 0px 2px 13px rgba(0, 0, 0, 0.06);
+        border-radius: 8px;
+    }
+    
+    .article h2 {
+        margin-bottom: 12px;
+    }
+    
+    .architect {
+        width: 100%;
+    }
+    
+    .architect button {
+        display: none;
+    }
+    
+    .architect img {
+        width: 90%;
+        padding: 0;
+    }
+    .engineers {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 13px;
+        margin: 15px;
+    }
+    
+    .engineer-details h3 {
+        margin-bottom: 12px;
+    }
+    
+    .engineer {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        align-items: center;
+    }
+    
+    .engineer img {
+        width: 50%;
+        height: 60%;
+    }
+    .some-facts-info {
+        width: 25%;
+    }
+    
+    .some-facts-info.title {
+        width: 70%;
+        margin-bottom: 5px;
+    }
+    .some-facts-info.description{
+        width: 70%;
+        text-align: center;
+    }
+    .some-facts-icon {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin:0;
+    }
+    
+    .icon {
+        width: 90%;
+        padding-top: 15px;
+        text-align: center;
+    }
+
+    .icon h2 {
+        margin: 0px;
+    }
+
+    .sponsors-info-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+    
+    .sponsors-info {
+        width: 90%;
+        margin: 0px;
+        text-align: center;
+    }
+    
+    .sponsors-info h1 {
+        margin-bottom: 15px;
+    }
+    
+    .sponsors-logo {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        /* justify-content: space-between; */
+        width: 60%;
+    }
+    footer {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+}
